# distil

./: .gitignore  README.md  config.toml  pyproject.toml
distil/: __init__.py  __main__.py  cli.py  config.py  core.py  llm.py  ollama_setup.py  prompts.py  web.py
